<resources>
    <string name="app_name">Habit Tracker</string>
    <string name="today">TODAY</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="desc_add">Add</string>
    <string name="your_habits_for_today">Your habits for today</string>
    <string name="make_new_habit">Make New Habit</string>
    <string name="close">close</string>
    <string name="type_name_of_task">Введіть назву</string>
    <string name="regular_habit">Регулярнa звичка</string>
    <string name="see_icons">See icons</string>
    <string name="icon">Значок</string>
    <string name="color">Колір</string>
    <string name="type_your_name_of_task">Type your name of task</string>
    <string name="repeat">Повторення</string>
    <string name="days_of_repeat">Дні повторення</string>
    <string name="do_do">Виконати…</string>
    <string name="target_for_the_day">Ціль на день</string>
    <string name="advanced_settings">Розширені налаштування</string>
    <string name="evening">Ввечері</string>
    <string name="day">Вдень</string>
    <string name="morning">Вранці</string>
    <string name="doesnt_matter">Не важливо</string>
    <string name="save">Зберегти</string>
    <string name="every_day">Щодня</string>
    <string name="sunday">Н</string>
    <string name="saturday">С</string>
    <string name="friday">П</string>
    <string name="thursday">Ч</string>
    <string name="wednesday">С</string>
    <string name="tuesday">В</string>
    <string name="monday">П</string>
    <string name="empty_rv">Here is empty...\nYou can add a new habit \nby pressing on button below</string>
    <string name="icon_of_habit">Icon of habit</string>
    <string name="inspiration">Натхнення</string>
    <string name="notif_for_this_habit">Нагадування для цієї звички</string>
    <string name="inspire_yourself">Надихни себе на виконання</string>
</resources>